# unixProject01

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.c  gameLogic.c  gameLogic.h  main.c  main.h  numBaseball.c  server.c  ui.c  ui.h
client/: CMakeLists.txt  client.c  client.h  gameLogic.c  gameLogic.h  main.c  server.c  ui.c  ui.h
local/: gameLogic.c  gameLogic.h  main.c  main.h  ui.c  ui.h
server/: CMakeLists.txt  gameLogic.c  gameLogic.h  server.c  server.h  ui.c
